[package]
name = "nasset-autocompounder"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "Contract for nasset autocompounder"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/nasset-autocompounder"
homepage = "todo"
documentation = "todo"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

# TODO: update versions
[dependencies]
protobuf = { version = "2.27.1", features = ["with-bytes"] }
cw20 = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.3", features = ["iterator"] }
cw-storage-plus = { version = "0.9.1" }
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"
terra-cosmwasm = { version = "2.2" }
cw20-base = { version = "0.9.1", features = ["library"] }
cosmwasm-storage = { version = "0.16.3", features = ["iterator"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.6" }
